# docs/swagger.json
@@ -510,6 +510,53 @@
                 }
             }
         },
+        "/courses/pdf/summarize": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "`This endpoint accepts a PDF file and returns a summarized version of its content.`",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "tags": [
+                    "Courses"
+                ],
+                "summary": "Summarize a PDF document",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "PDF file to summarize",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "default": 30,
+                        "description": "Maximum number of summary points",
+                        "name": "max_points",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/courses.PDFSummaryResponseSchema"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/base.InvalidErrorExample"
+                        }
+                    }
+                }
+            }
+        },
         "/courses/quizzes/{quiz_slug}": {
             "get": {
                 "security": [
@@ -589,7 +636,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "`This endpoint allows a user to submit their answers for a quiz`",
+                "description": "`This endpoint allows a user to submit their answers for a quiz`\n`If this submission is for the last quiz in the course, a certificate will be generated`",
                 "tags": [
                     "Courses"
                 ],
@@ -2885,6 +2932,36 @@
                 "status": {
                     "type": "string",
                     "example": "success"
+                }
+            }
+        },
+        "courses.PDFSummaryResponseSchema": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/courses.PDFSummarySchema"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Data fetched/created/updated/deleted"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
+        "courses.PDFSummarySchema": {
+            "type": "object",
+            "properties": {
+                "points": {
+                    "type": "integer"
+                },
+                "summary": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
